2003-03-31  Darin Adler  <darin@apple.com>

        Reviewed by John.

        - fixed 3211730 -- REGRESSION: Flash spawns blank page then loads new page inside banner itself

        * Plugins.subproj/WebBaseNetscapePluginView.m: (-[WebBaseNetscapePluginView loadPluginRequest:]):
        Load the request in the frame we found or created, not always in our own frame (oops!).

        - other changes

        * History.subproj/WebHistory.h: Update comments to all say "Item" instead of "Entry".
        They didn't match the method names any more.
        
        * WebView.subproj/WebView.m:
        (-[WebView acceptsFirstResponder]): Return YES.
        (-[WebView becomeFirstResponder]): Pass first responder on to the WebFrameView in the same way
        the WebFrameView passes it on to the document view.

2003-03-30  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Darin.

	- fixed 3204257 - CNN's 'war on iraq' ticker stops on mouseover

        * WebView.subproj/WebHTMLViewPrivate.h:
        * WebView.subproj/WebHTMLViewPrivate.m:
        (-[WebHTMLView _updateMouseoverWithEvent:]): When leaving an HTML
	view, tell it that the mouse moved outside everything in the view,
	even accounting for scrolled off portions (otherwise khtml gets
	confused). This makes cross-frame mouse enter/leave work properly.
        (-[WebHTMLView _clearLastHitViewIfSelf]): Method to clear last hit view,
	so we don't need to retain it.
        * WebView.subproj/WebHTMLView.m:
        (-[WebHTMLView dealloc]): Call _clearLastHitViewIfSelf.

2003-03-28  Richard Williamson  <rjw@apple.com>

        Fix typo in comments that broke headerdoc.
        
        Reviewed by me.

        * WebView.subproj/WebWindowOperationsDelegate.h:

2003-03-28  Ken Kocienda  <kocienda@apple.com>

        Reviewed by John

	Imports NSURLConnection private header to access NSURLConnection code 
	that did not make the API cut.

        * WebView.subproj/WebBaseResourceHandleDelegate.m: